# svd2rust_example_stm32l0x1

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
src/: main.rs
svd_lib/stm32l0x1/: Cargo.toml  README.md
svd_lib/stm32l0x1/src/: adc.rs  crc.rs  dbg.rs  dma1.rs  firewall.rs  flash.rs  lib.rs  lpuart1.rs  rcc.rs  rtc.rs  syscfg_comp.rs  tim2.rs  tim21.rs  tim22.rs  tim6.rs
svd_lib/stm32l0x1/src/adc/: calfact.rs  ccr.rs  cfgr2.rs  cr.rs  ier.rs  isr.rs  tr.rs
svd_lib/stm32l0x1/src/aes/: dinr.rs
svd_lib/stm32l0x1/src/dbg/: apb1_fz.rs  apb2_fz.rs  cr.rs
svd_lib/stm32l0x1/src/exti/: emr.rs  ftsr.rs  imr.rs  pr.rs  rtsr.rs  swier.rs
svd_lib/stm32l0x1/src/firewall/: firewall_cr.rs  firewall_csl.rs  firewall_cssa.rs  firewall_nvdsl.rs  firewall_nvdssa.rs  firewall_vdsl.rs  firewall_vdssa.rs
svd_lib/stm32l0x1/src/flash/: acr.rs  obr.rs  pecr.rs  pekeyr.rs  prgkeyr.rs  sr.rs  wrpr.rs
svd_lib/stm32l0x1/src/gpioa/: afrl.rs  brr.rs  moder.rs  ospeedr.rs  pupdr.rs
svd_lib/stm32l0x1/src/gpiob/: afrh.rs  bsrr.rs  idr.rs  moder.rs  odr.rs  pupdr.rs
svd_lib/stm32l0x1/src/lptim/: arr.rs  cmp.rs  cnt.rs
svd_lib/stm32l0x1/src/pwr/: cr.rs  csr.rs
svd_lib/stm32l0x1/src/rcc/: ahbenr.rs  ahbrstr.rs  ahbsmenr.rs  apb1enr.rs  apb1rstr.rs  apb1smenr.rs  apb2enr.rs  apb2rstr.rs  apb2smenr.rs  ccipr.rs  cfgr.rs  cicr.rs  cier.rs  cifr.rs  cr.rs  csr.rs  icscr.rs  iopenr.rs  ioprstr.rs  iopsmen.rs
svd_lib/stm32l0x1/src/rtc/: cr.rs  dr.rs  isr.rs  or.rs  prer.rs  tampcr.rs  wutr.rs
svd_lib/stm32l0x1/src/spi1/: cr2.rs  sr.rs
(+11 files in other folders)
