[package]
authors = ["WRansohoff"]
edition = "2018"
readme = "README.md"
name = "stm32-rust-blink"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"

# Local STM32L0x1 Peripheral Access Crate.
# This is un-modified / un-cleaned / un-tested output from svd2rust,
# so I don't want to put it on crates.io yet in case anyone tries to use it.
[dependencies.stm32l0x1]
path = "./svd_lib/stm32l0x1"
features = ["rt"]
version = "0.0.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32-rust-blink"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
